# thanatos

./: .cirrus.yml  .travis.yml  Cargo.toml  README.md
.cargo/: config.toml
bootimage/: Cargo.toml  Makefile
bootimage/src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm  multiboot_header.asm
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  lib.rs  main.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
