[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23" # TODO: Update to 0.11 or write our own bootloader
volatile = "0.2.6" # TODO: This is an old version but apparently newer versions don't work?
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"